Fix styling issues on small devices

--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100dvh;
   margin: 0;
   background: radial-gradient(transparent 0, rgb(56, 6, 117) 100%),
     radial-gradient(at 80% 80%, rgba(31, 221, 255, 0.64) 0, transparent 50%),
@@ -20,6 +20,8 @@ body {
   box-sizing: border-box;
   border: 8px solid #000000;
   box-shadow: 0 0 200px rgba(0, 0, 0, 0.9) inset;
+  overscroll-behavior: none;
+  overflow: hidden;
 }
 
 .footer {
@@ -28,6 +30,12 @@ body {
   width: 95%;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-height: 800px) {
+  .footer {
+    display: none !important;
+  }
 }
 
 .footer img {
@@ -39,9 +47,6 @@ body {
 }
 
 .footer-link {
-  /* position: absolute;
-  top: -50px;
-  right: 0; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -72,6 +77,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .overlay {
   position: absolute;
   top: 0;
@@ -108,7 +114,7 @@ body {
     ),
     linear-gradient(90deg, #b8a073 0%, #d9c5a0 10%, #b8a073 90%, #83704c 100%);
   box-shadow: 3px 3px 2px #342c489f, 8px 6px 30px #312649;
-  border-right: 3px solid #131149;
+
   border-left: 2px solid #f9d3829c;
   padding: 80px 10px 15px 10px;
   border-radius: 40px 40px 20px 20px;
@@ -210,7 +216,6 @@ body {
   mix-blend-mode: screen;
   margin-top: 15px;
   margin-right: 10px;
-  filter: saturate(20%) brightness(120%) hue-rotate(-40deg);
   opacity: 0.13;
 }
 
@@ -223,8 +228,15 @@ body {
   font-style: normal;
   z-index: 10;
   pointer-events: none;
-  filter: saturate(200%) brightness(120%) hue-rotate(320deg);
-  opacity: 0.6;
+  filter: brightness(120%);
+  opacity: 0.35;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .buttons {
@@ -255,6 +267,7 @@ body {
   transition: transform 0.1s ease, box-shadow 0.1s ease, filter 0.2s ease;
   border-top: 1px solid rgba(246, 246, 246, 0.534);
   border-left: 1px solid rgba(246, 246, 246, 0.24);
+  touch-action: manipulation;
   overflow: hidden;
   user-select: none;
   color: #282828;
@@ -267,6 +280,14 @@ body {
   font-style: normal;
   z-index: 10;
   pointer-events: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .btn::before {
@@ -283,7 +304,6 @@ body {
   border-top: 1px solid rgba(0, 0, 0, 0.264);
 }
 
-/* Typenspezifische Farben */
 .btn.black {
   background: linear-gradient(
       45deg,
